# MillenniumEngine

./: CMakeLists.txt
include/glad/: glad.h
include/headers/: camera.hpp  core.hpp  cube.hpp  ebo.hpp  filemanager.hpp  gui.hpp  mesh.hpp  model.hpp  objModel.hpp  render.hpp  shaders.hpp  terrarian.hpp  texture.hpp  tranfomation.hpp  vao.hpp  vbo.hpp  window.hpp
include/utils/: meshiUtils.hpp
shaders/: light.frag  light.vert  shader.frag  shader.vert  shader2.frag  terrarian.frag  terrarian.vert
shaders/cube/: cube.frag  cube.vert
src/: camera.cpp  core.cpp  cube.cpp  ebo.cpp  filemanager.cpp  glad.c  gui.cpp  main.cpp  mesh.cpp  meshi.cpp  model.cpp  objModel.cpp  render.cpp  shader.cpp  stb_image.cpp  terrarian.cpp  texture.cpp  tranformation.cpp  vao.cpp  vbo.cpp  window.cpp
